[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banklyze"
version = "0.1.0"
description = "Python SDK for the Banklyze API — MCA underwriting platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx>=0.25"]

[project.urls]
Homepage = "https://banklyze.com"
Documentation = "https://docs.banklyze.com"

[tool.setuptools.packages.find]
where = ["."]
