[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banklyze"
version = "1.3.0"
description = "Official Python SDK for the Banklyze API — AI-powered MCA underwriting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25,<1.0",
    "pydantic>=2.0,<3.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://banklyze.com"
Documentation = "https://docs.banklyze.com/sdk/python"
Repository = "https://github.com/thornebridge/banklyze-python"
Changelog = "https://github.com/thornebridge/banklyze-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["banklyze"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
